kubernetes/external/home-assistant/service.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: home-assistant
  labels:
    kubernetes.io/service-name: home-assistant
addressType: IPv4
ports:
- name: http
  port: 8123
endpoints:
- addresses:
  - 192.168.40.100
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
spec:
  ports:
  - name: http
    port: 8123
    targetPort: 8123
