kubernetes/external/home-assistant/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
spec:
  hostnames:
  - haos.cecobask.com
  parentRefs:
  - name: envoy
    namespace: envoy-gateway
  rules:
  - backendRefs:
    - name: home-assistant
      port: 8123
